<resources>
    <string name="app_name">B3Q1_Android_project</string>
    <string name="aClasses">Classes</string>
    <string name="ba1">BA1</string>
    <string name="ba2">BA2</string>
    <string name="ba3">BA3</string>
    <string name="student_ba1">Les étudiants de BA1</string>
    <string name="eval_name">Évaluations %1$s</string>
    <string name="add_button_description">Add</string>
    <string name="course_name">Nom du cours</string>
    <string name="modification">modification</string>
    <string name="confirm">Confirmer</string>
    <string name="delete">Supprimer</string>
    <string name="person">Personne</string>
    <string name="course">cours</string>
    <string name="arrow_forward">flèche</string>
    <string name="edition">Edition</string>
    <string name="nom_de_l_valuation">Nom de l\'évaluation</string>
    <string name="maxPoints">Points Max</string>
    <string name="addStudent">Ajouter Etudiant</string>
    <string name="saveStudent">Sauvegarder</string>
    <string name="studentName">Nom Etudiant</string>
    <string name="aAddStudent">Ajouter des Etudiants</string>
    <string name="ajout_notes">Ajouter des notes</string>
    <string name="classes">Classes</string>
    <string name="add">Ajouter</string>
    <string name="classe">Classes</string>
    <string name="student_name">Nom Etudiant</string>
    <string name="save" />
    <string name="edit_evaluation">Editer Evaluation</string>
    <string name="evaluation">Evaluation</string>
    <string name="evaluation_name">Nom Evaluation</string>

</resources>