<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/courseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/course_name"
        android:visibility="visible"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/courseNameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/modifButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pen"
        android:contentDescription="@string/modification" />

    <ImageButton
        android:id="@+id/checkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check"
        android:contentDescription="@string/confirm"
        android:visibility="gone" />

</LinearLayout>